[gd_scene format=3 uid="uid://c8gvnq4sooba4"]

[ext_resource type="Script" uid="uid://bg6bfi0powtvj" path="res://scenes/demo/toastx_demo.gd" id="1_demo"]

[node name="ToastXDemo" type="Control" unique_id=2049948110]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_demo")

[node name="ColorRect" type="ColorRect" parent="." unique_id=1861459216]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.12, 0.12, 0.14, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=1552885498]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 12

[node name="Title" type="Label" parent="VBoxContainer" unique_id=225161177]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "ToastX Demo"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer" unique_id=845359004]
layout_mode = 2

[node name="MessageInput" type="LineEdit" parent="VBoxContainer" unique_id=1263509447]
layout_mode = 2
theme_override_font_sizes/font_size = 16
placeholder_text = "Type your toast message here..."

[node name="GridContainer" type="GridContainer" parent="VBoxContainer" unique_id=1799427705]
layout_mode = 2
columns = 3

[node name="ShowToast" type="Button" parent="VBoxContainer/GridContainer" unique_id=1616629095]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Show Toast"

[node name="ShowSuccess" type="Button" parent="VBoxContainer/GridContainer" unique_id=1071407708]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Success"

[node name="ShowError" type="Button" parent="VBoxContainer/GridContainer" unique_id=954735370]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Error"

[node name="ShowWarning" type="Button" parent="VBoxContainer/GridContainer" unique_id=1813799191]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Warning"

[node name="ShowInfo" type="Button" parent="VBoxContainer/GridContainer" unique_id=896933081]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Info"

[node name="ShowLoading" type="Button" parent="VBoxContainer/GridContainer" unique_id=22577550]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Loading"

[node name="ShowDeck" type="Button" parent="VBoxContainer/GridContainer" unique_id=1217840573]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Deck Stack"

[node name="ShowCustomIcons" type="Button" parent="VBoxContainer/GridContainer" unique_id=1217840574]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Custom Icons"

[node name="ShowMedieval" type="Button" parent="VBoxContainer/GridContainer" unique_id=1217840575]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Medieval"

[node name="ShowCenter" type="Button" parent="VBoxContainer/GridContainer" unique_id=1217840577]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Center"

[node name="ShowTop" type="Button" parent="VBoxContainer/GridContainer" unique_id=1217840578]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Top"

[node name="ClearAll" type="Button" parent="VBoxContainer/GridContainer" unique_id=1926132]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Clear All"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer" unique_id=633291555]
layout_mode = 2

[node name="Instructions" type="Label" parent="VBoxContainer" unique_id=51427840]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Features: 7 built-in styles • Loading toasts • Deck stack • Custom icons • Medieval theme • Center/Top origins • All configurable via ToastStyle"
horizontal_alignment = 1
autowrap_mode = 3

[connection signal="pressed" from="VBoxContainer/GridContainer/ShowToast" to="." method="_on_show_toast_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/ShowSuccess" to="." method="_on_show_success_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/ShowError" to="." method="_on_show_error_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/ShowWarning" to="." method="_on_show_warning_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/ShowInfo" to="." method="_on_show_info_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/ShowLoading" to="." method="_on_show_loading_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/ShowDeck" to="." method="_on_show_deck_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/ShowCustomIcons" to="." method="_on_show_custom_icons_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/ShowMedieval" to="." method="_on_show_medieval_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/ShowCenter" to="." method="_on_show_center_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/ShowTop" to="." method="_on_show_top_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/ClearAll" to="." method="_on_clear_all_pressed"]
